<resources>
    <string name="app_name">Ordenamiento</string>
    <string name="añadirNum">Añadir Número</string>
    <string name="Textview">Ordenamiento</string>
    <string name="titulo1">Bubble</string>
    <string name="titulo2">Selection</string>
    <string name="titulo3">Insertion</string>
    <string name="titulo4">Iteracion</string>
    <string name="titulo5">Lista</string>
    <string name="titulo6">Swap</string>
    <string name="titulo7">Comparaciones</string>
</resources>
